X11: Fix test flakes related to window focus

This CL removes code intended to fix "some tests depending on a window
being IsActive() immediately after an Activate()".  After
https://codereview.chromium.org/2630773002, all of these cases should
be using WidgetActivationWaiter, so this is unnecessary.  This was
causing DCHECK(!is_active || window_mapped_in_server_) to fail.

In addition, XSetInputFocus on an unmapped window will fail, so
supress the error in this case.  This is the same thing GTK does
https://github.com/GNOME/gtk/blob/7ade6e3f4668220f0fa1382944a87e63691ad9ad/gdk/x11/gdkwindow-x11.c#L1904

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_chromium_dbg_ng
BUG=701722,701921,701706,701485,701484,700692,700683,700661,701886
R=erg@chromium.org

Review-Url: https://codereview.chromium.org/2756183003
Cr-Commit-Position: refs/heads/master@{#457859}

Former-commit-id: 9b35aa2cb18ff78d6cfc843f0e9414ccb6c22150